--- a/saleh/pubspec.yaml
+++ b/saleh/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   
   # Local storage
   shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
   
   # Local notifications
   flutter_local_notifications: ^17.0.0
