--- a/saleh/pubspec.yaml
+++ b/saleh/pubspec.yaml
@@ -19,9 +19,9 @@ dependencies:
   # HTTP Client - للتواصل مع Cloudflare Worker فقط
   http: ^1.2.0
   
-  # State Management - Riverpod 2.x (supports StateNotifier)
-  flutter_riverpod: ^2.6.1
-  riverpod_annotation: ^2.6.1
+  # State Management - Riverpod 3.x (uses Notifier instead of StateNotifier)
+  flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
   
   # Navigation
   go_router: ^14.8.1
@@ -48,15 +48,8 @@ dependencies:
   # FFmpeg for video processing (temporarily disabled - repository down)
   # ffmpeg_kit_flutter: ^6.0.3
   
-  # Color picker
-  flutter_colorpicker: ^1.1.0
-  
-  # Progress indicators
-  percent_indicator: ^4.2.3
-  
   # Utilities
   intl: ^0.20.2
-  uuid: ^4.3.3
   url_launcher: ^6.3.2
   share_plus: ^12.0.1
   fl_chart: ^1.1.1
@@ -77,7 +70,7 @@ dev_dependencies:
   # flutter_native_splash: ^2.4.4  # Disabled temporarily due to AGP compatibility issues
   
   # Code Generation for Riverpod
-  riverpod_generator: ^2.6.5
+  riverpod_generator: ^3.0.3
   build_runner: ^2.5.4
   mockito: ^5.4.6
   freezed: ^3.1.0
@@ -109,5 +102,4 @@ flutter:
   
   # Assets
   assets:
-    - assets/images/
     - assets/icons/
