--- a/mbuy-worker/wrangler.jsonc
+++ b/mbuy-worker/wrangler.jsonc
@@ -7,6 +7,7 @@
 	"name": "misty-mode-b68b",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-12-15",
+	"compatibility_flags": ["nodejs_compat"],
 	"observability": {
 		"enabled": true,
 		"head_sampling_rate": 1
