--- a/saleh/pubspec.yaml
+++ b/saleh/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   json_annotation: ^4.9.0
   shimmer: ^3.0.0
   state_notifier: ^1.0.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
