--- a/saleh/pubspec.yaml
+++ b/saleh/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^4.2.1
   firebase_analytics: ^12.0.4
   firebase_messaging: ^16.0.4
+  firebase_remote_config: ^6.0.4
   
   # UI Enhancements
   google_fonts: ^6.1.0
