--- a/docker/.env.dev
+++ b/docker/.env.dev
@@ -3,6 +3,18 @@
 # ============================================
 
 # ============================================
+# AnythingLLM Configuration
+# ============================================
+ANYTHINGLLM_API_KEY=
+ANYTHINGLLM_BASE_URL=http://localhost:3001
+ANYTHINGLLM_WORKSPACE=luh
+
+# GitHub Integration
+GITHUB_TOKEN=
+GITHUB_REPO=muath5024-maker/mg
+GITHUB_BRANCH=main
+
+# ============================================
 # Database Configuration
 # ============================================
 DATABASE_URL=postgresql://postgres:postgres123@localhost:5432/mbuy_dev
