fix: إصلاح AnythingLLM وتحديث الإعدادات
- تحديث لآخر إصدار
- إصلاح مشكلة Agent configuration
- إعداد Ollama بشكل صحيح
- إضافة سكريبت إصلاح تلقائي
- إضافة دليل كامل للإصلاح

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,7 @@
     "deno.enable": false,
     "dart.showTodos": false,
     
-    // AnythingLLM Integration
-    "anything-llm.apiKey": "",
+    // AnythingLLM Integration (لا يحتاج API Key للاستخدام المحلي)
     "anything-llm.baseURL": "http://localhost:3001",
     "anything-llm.workspace": "luh",
     "anything-llm.enabled": true,
